--- a/Taylr/Base.lproj/Onboarding.storyboard
+++ b/Taylr/Base.lproj/Onboarding.storyboard
@@ -193,7 +193,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aaP-b6-Uhf" id="1L0-nh-6NF">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-cover-image" translatesAutoresizingMaskIntoConstraints="NO" id="RI3-ac-5pk">
+                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-photo" translatesAutoresizingMaskIntoConstraints="NO" id="RI3-ac-5pk">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="195"/>
                                                     <gestureRecognizers/>
                                                     <connections>
@@ -698,7 +698,7 @@
         <image name="empty-profile-pic" width="100" height="100"/>
         <image name="ic-checkmark" width="28" height="28"/>
         <image name="ic-right-arrow-white" width="12" height="21"/>
-        <image name="sample-cover-image" width="750" height="368"/>
+        <image name="sample-photo" width="1242" height="660"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="ztg-XZ-LWS"/>
